<resources>
    <string name="app_name">WeatherApp</string>

    <!-- Menu Bottom -->
    <string name="app_menu_weather">Weather</string>
    <string name="app_menu_about">About</string>

    <!-- Titles -->
    <string name="weathers_screen_title">Weathers</string>
    <string name="about_screen_title">About</string>

    <!-- Details Weather Fragment -->
    <string name="weather_detail_temp_title">Temperature:</string>
    <string name="weather_detail_temp_max_title">Max:</string>
    <string name="weather_detail_temp_min_title">Min:</string>

    <!-- Error State -->
    <string name="error_loading_weather">Error when trying to load Weather</string>
    <string name="common_try_again">Try Again</string>

    <!-- About Weather -->
    <string name="about_description">Android Weather App\n\n Using kotlin for the code, MVVM architecture, navigation components(using args for sending params when get to next page), using <a href='#'>https://openweathermap.org</a> api, unit tests with Mockito, Flow and LiveData.</string>

    <!-- FragmentWeather -->
    <string name="fragment_weather_title">Select a City:</string>
    <string name="fragment_weather_your_location_title">Your Location</string>
    <string name="fragment_weather_london_button">London</string>
    <string name="fragment_weather_madrid_button">Madrid</string>
    <string name="fragment_weather_paris_button">Paris</string>
    <string name="fragment_weather_berlin_button">Berlin</string>
    <string name="fragment_weather_copenhagen_button">Copenhagen</string>
    <string name="fragment_weather_rome_button">Rome</string>
    <string name="fragment_weather_lisbon_button">Lisbon</string>
    <string name="fragment_weather_dublin_button">Dublin</string>
    <string name="fragment_weather_prague_button">Prague</string>
    <string name="fragment_weather_vienna_button">Vienna</string>

</resources>