<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.weathers.WeathersFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/weathers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_weather_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weathers_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weathers_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/your_location_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/fragment_weather_your_location_title"/>

            <Button
                android:id="@+id/london_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_location_weather"
                android:text="@string/fragment_weather_london_button"/>

            <Button
                android:id="@+id/madrid_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/london_weather"
                android:text="@string/fragment_weather_madrid_button"/>

            <Button
                android:id="@+id/paris_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/madrid_weather"
                android:text="@string/fragment_weather_paris_button"/>

            <Button
                android:id="@+id/berlin_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paris_weather"
                android:text="@string/fragment_weather_berlin_button"/>

            <Button
                android:id="@+id/copenhagen_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/berlin_weather"
                android:text="@string/fragment_weather_copenhagen_button"/>

            <Button
                android:id="@+id/rome_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copenhagen_weather"
                android:text="@string/fragment_weather_rome_button"/>

            <Button
                android:id="@+id/lisbon_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rome_weather"
                android:text="@string/fragment_weather_lisbon_button"/>

            <Button
                android:id="@+id/dublin_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lisbon_weather"
                android:text="@string/fragment_weather_dublin_button"/>

            <Button
                android:id="@+id/prague_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dublin_weather"
                android:text="@string/fragment_weather_prague_button"/>

            <Button
                android:id="@+id/vienna_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prague_weather"
                android:text="@string/fragment_weather_vienna_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>