<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_character"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_temp_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/weather_detail_temp_title"/>

        <TextView
            android:id="@+id/text_temp_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_temp_title"
            tools:text="8.48ºC"/>

        <TextView
            android:id="@+id/text_temp_max_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_temp_value"
            tools:text="@string/weather_detail_temp_max_title"/>

        <TextView
            android:id="@+id/text_temp_max_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_temp_max_title"
            tools:text="8.48ºC"/>

        <TextView
            android:id="@+id/text_temp_min_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_temp_max_value"
            tools:text="@string/weather_detail_temp_min_title"/>

        <TextView
            android:id="@+id/text_temp_min_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_temp_min_title"
            tools:text="8.48º"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>